--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -33,6 +33,7 @@ set(SRB2_CORE_SOURCES
 	m_misc.c
 	m_queue.c
 	m_random.c
+	mapload.c
 	md5.c
 	mserv.c
 	s_sound.c
@@ -97,6 +98,7 @@ set(SRB2_CORE_HEADERS
 	m_queue.h
 	m_random.h
 	m_swap.h
+	mapload.h
 	md5.h
 	mserv.h
 	p5prof.h
